--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 # Install dependencies
 COPY package*.json ./
-RUN npm install
+RUN rm -rf node_modules package-lock.json && npm install && npm install @rollup/rollup-linux-x64-musl
 
 # Copy source code
 COPY . .
