--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,8 @@ services:
       - "5173:5173"
     environment:
       - VITE_API_URL=${VITE_API_URL:-http://localhost:3000}
+      - CHOKIDAR_USEPOLLING=1
+      - WATCHPACK_POLLING=true
     networks:
       - rmparking-net
     volumes:
